--- a/blank-template.html
+++ b/blank-template.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <h1>Table template</h1>
-    <tr>
-      <td>Hi, I'm your first cell.</td>
-      <td>Hi, I'm your second cell.</td>
-      <td>Hi, I'm your third cell.</td>
-      <td>Hi, I'm your fourth cell.</td>
-    </tr>
+    <table>
+      <tr>
+        <td>Hi, I'm your first cell.</td>
+        <td>Hi, I'm your second cell.</td>
+        <td>Hi, I'm your third cell.</td>
+        <td>Hi, I'm your fourth cell.</td>
+      </tr>
+    </table>
     </body>
 </html>
