--- a/dogs-table.html
+++ b/dogs-table.html
@@ -11,7 +11,7 @@
 
     <table>
       <tr>
-        <th>&nbsp;</th>
+        <th>Name</th>
         <td>Knocky</td>
         <td>Flor</td>
         <td>Ella</td>
